Добавил webp изображения в разметку страницы каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,6 +14,12 @@
       <div class="menu__header">
         <a class="page-header__logo link-reset" href="index.html">
           <picture class="page-header__image">
+            <source type="image/webp" srcset="img/logos/logo-desktop.webp 1x, img/logos/logo-desktop@2x.webp 2x"
+              media="(min-width: 1440px)">
+            <source type="image/webp" srcset="img/logos/logo-tablet.webp 1x, img/logos/logo-tablet@2x.webp 2x"
+              media="(min-width: 768px)">
+            <source type="image/webp"
+              srcset="img/logos/logo-white-mobile.webp 1x, img/logos/logo-white-mobile@2x.webp 2x">
             <source srcset="img/logos/logo-desktop.png 1x, img/logos/logo-desktop@2x.png 2x"
               media="(min-width: 1440px)">
             <source srcset="img/logos/logo-tablet.png 1x, img/logos/logo-tablet@2x.png 2x" media="(min-width: 768px)">
@@ -648,6 +654,12 @@
             <div class="user-card user-card--catalog">
               <a class="user-card__image" href="#">
                 <picture>
+                  <source srcset="img/users/firsova-desktop.webp 1x, img/users/firsova-tablet-285-285@2x.webp 2x"
+                    media="(min-width: 1440px)">
+                  <source srcset="img/users/firsova-tablet-190-190.webp 1x, img/users/firsova-tablet-190-190@2x.webp 2x"
+                    media="(min-width: 768px)">
+                  <source type="image/webp"
+                    srcset="img/users/firsova-mobile.webp 1x, img/users/firsova-mobile@2x.webp 2x">
                   <source srcset="img/users/firsova-desktop.png 1x, img/users/firsova-tablet-285-285@2x.png 2x"
                     media="(min-width: 1440px)">
                   <source srcset="img/users/firsova-tablet-190-190.png 1x, img/users/firsova-tablet-190-190@2x.png 2x"
@@ -712,6 +724,11 @@
               <ul class="flag-list flag-list--catalog list-reset">
                 <li class="flag-list__item flag-list__item--companions-filtered">
                   <picture class="flag-list__img">
+                    <source type="image/webp"
+                      srcset="img/flags/flag-sri-lanka-35-24.webp 1x, img/flags/flag-sri-lanka-35-24@2x.webp 2x"
+                      media="(min-width: 767px)">
+                    <source type="image/webp"
+                      srcset="img/flags/flag-sri-lanka-26-18.webp 1x, img/flags/flag-sri-lanka-26-18@2x.webp 2x">
                     <source srcset="img/flags/flag-sri-lanka-35-24.png 1x, img/flags/flag-sri-lanka-35-24@2x.png 2x"
                       media="(min-width: 767px)">
                     <img src="img/flags/flag-sri-lanka-26-18.png" srcset="img/flags/flag-sri-lanka-26-18@2x.png 2x"
@@ -721,6 +738,11 @@
                 </li>
                 <li class="flag-list__item flag-list__item--companions-filtered">
                   <picture class="flag-list__img">
+                    <source type="image/webp"
+                      srcset="img/flags/flag-thailand-35-24.webp 1x, img/flags/flag-thailand-35-24@2x.webp 2x"
+                      media="(min-width: 767px)">
+                    <source type="image/webp"
+                      srcset="img/flags/flag-thailand-26-18.webp 1x, img/flags/flag-thailand-26-18@2x.webp 2x">
                     <source srcset="img/flags/flag-thailand-35-24.png 1x, img/flags/flag-thailand-35-24@2x.png 2x"
                       media="(min-width: 767px)">
                     <img src="img/flags/flag-thailand-26-18.png" srcset="img/flags/flag-thailand-26-18@2x.png 2x"
@@ -730,6 +752,11 @@
                 </li>
                 <li class="flag-list__item flag-list__item--companions-filtered">
                   <picture class="flag-list__img">
+                    <source type="image/webp"
+                      srcset="img/flags/flag-seychelles-35-24.webp 1x, img/flags/flag-seychelles-35-24@2x.webp 2x"
+                      media="(min-width: 767px)">
+                    <source type="image/webp"
+                      srcset="img/flags/flag-seychelles-26-18.webp 1x, img/flags/flag-seychelles-26-18@2x.webp 2x">
                     <source srcset="img/flags/flag-seychelles-35-24.png 1x, img/flags/flag-seychelles-35-24@2x.png 2x"
                       media="(min-width: 767px)">
                     <img src="img/flags/flag-seychelles-26-18.png" srcset="img/flags/flag-seychelles-26-18@2x.png 2x"
@@ -810,6 +837,13 @@
             <div class="user-card user-card--catalog">
               <a class="user-card__image" href="#">
                 <picture>
+                  <source type="image/webp"
+                    srcset="img/users/demin-desktop.webp 1x, img/users/demin-tablet-285-285@2x.webp 2x"
+                    media="(min-width: 1440px)">
+                  <source type="image/webp"
+                    srcset="img/users/demin-tablet.webp 1x, img/users/demin-desktop-190-190@2x.webp 2x"
+                    media="(min-width: 768px)">
+                  <source type="image/webp" srcset="img/users/demin-mobile.webp 1x, img/users/demin-mobile@2x.webp 2x">
                   <source srcset="img/users/demin-desktop.png 1x, img/users/demin-tablet-285-285@2x.png 2x"
                     media="(min-width: 1440px)">
                   <source srcset="img/users/demin-tablet.png 1x, img/users/demin-desktop-190-190@2x.png 2x"
@@ -868,6 +902,11 @@
               <ul class="flag-list flag-list--catalog flag-list--two-flags list-reset">
                 <li class="flag-list__item flag-list__item--companions-filtered">
                   <picture class="flag-list__img">
+                    <source type="image/webp"
+                      srcset="img/flags/flag-belgium-35-24.webp 1x, img/flags/flag-belgium-35-24@2x.webp 2x"
+                      media="(min-width: 767px)">
+                    <source type="image/webp"
+                      srcset="img/flags/flag-belgium-26-18.webp 1x, img/flags/flag-belgium-26-18@2x.webp 2x">
                     <source srcset="img/flags/flag-belgium-35-24.png 1x, img/flags/flag-belgium-35-24@2x.png 2x"
                       media="(min-width: 767px)">
                     <img src="img/flags/flag-belgium-26-18.png" srcset="img/flags/flag-belgium-26-18@2x.png 2x"
@@ -877,6 +916,11 @@
                 </li>
                 <li class="flag-list__item flag-list__item--companions-filtered">
                   <picture class="flag-list__img">
+                    <source type="image/webp"
+                      srcset="img/flags/flag-czech-35-24.webp 1x, img/flags/flag-czech-35-24@2x.webp 2x"
+                      media="(min-width: 767px)">
+                    <source type="image/webp"
+                      srcset="img/flags/flag-czech-26-18.webp 1x, img/flags/flag-czech-26-18@2x.webp 2x">
                     <source srcset="img/flags/flag-czech-35-24.png 1x, img/flags/flag-czech-35-24@2x.png 2x"
                       media="(min-width: 767px)">
                     <img src="img/flags/flag-czech-26-18.png" srcset="img/flags/flag-czech-26-18@2x.png 2x"
@@ -957,6 +1001,13 @@
             <div class="user-card user-card--catalog">
               <a class="user-card__image" href="#">
                 <picture>
+                  <source type="image/webp"
+                    srcset="img/users/smolov-desktop.webp 1x, img/users/smolov-desktop@2x.webp 2x"
+                    media="(min-width: 1440px)">
+                  <source type="image/webp" srcset="img/users/smolov-tablet.webp 1x, img/users/smolov-tablet@2x.webp 2x"
+                    media="(min-width: 768px)">
+                  <source type="image/webp"
+                    srcset="img/users/smolov-mobile.webp 1x, img/users/smolov-mobile@2x.webp 2x">
                   <source srcset="img/users/smolov-desktop.png 1x, img/users/smolov-desktop@2x.png 2x"
                     media="(min-width: 1440px)">
                   <source srcset="img/users/smolov-tablet.png 1x, img/users/smolov-tablet@2x.png 2x"
@@ -1015,6 +1066,11 @@
               <ul class="flag-list flag-list--catalog list-reset">
                 <li class="flag-list__item flag-list__item--companions-filtered">
                   <picture class="flag-list__img">
+                    <source type="image/webp"
+                      srcset="img/flags/flag-usa-35-24.webp 1x, img/flags/flag-usa-35-24@2x.webp 2x"
+                      media="(min-width: 767px)">
+                    <source type="image/webp"
+                      srcset="img/flags/flag-usa-26-18.webp 1x, img/flags/flag-usa-26-18@2x.webp 2x">
                     <source srcset="img/flags/flag-usa-35-24.png 1x, img/flags/flag-usa-35-24@2x.png 2x"
                       media="(min-width: 767px)">
                     <img src="img/flags/flag-usa-26-18.png" srcset="img/flags/flag-usa-26-18@2x.png 2x" alt="США">
@@ -1023,6 +1079,11 @@
                 </li>
                 <li class="flag-list__item flag-list__item--companions-filtered">
                   <picture class="flag-list__img">
+                    <source type="image/webp"
+                      srcset="img/flags/flag-australia-35-24.webp 1x, img/flags/flag-australia-35-24@2x.webp 2x"
+                      media="(min-width: 767px)">
+                    <source type="image/webp"
+                      srcset="img/flags/flag-australia-26-18.webp 1x, img/flags/flag-australia-26-18@2x.webp 2x">
                     <source srcset="img/flags/flag-australia-35-24.png 1x, img/flags/flag-australia-35-24@2x.png 2x"
                       media="(min-width: 767px)">
                     <img src="img/flags/flag-australia-26-18.png" srcset="img/flags/flag-australia-26-18@2x.png 2x"
@@ -1032,6 +1093,11 @@
                 </li>
                 <li class="flag-list__item flag-list__item--companions-filtered">
                   <picture class="flag-list__img">
+                    <source type="image/webp"
+                      srcset="img/flags/flag-dominikana-35-24.webp 1x, img/flags/flag-dominikana-35-24@2x.webp 2x"
+                      media="(min-width: 767px)">
+                    <source type="image/webp"
+                      srcset="img/flags/flag-dominikana-26-18.webp 1x, img/flags/flag-dominikana-26-18@2x.webp 2x">
                     <source srcset="img/flags/flag-dominikana-35-24.png 1x, img/flags/flag-dominikana-35-24@2x.png 2x"
                       media="(min-width: 767px)">
                     <img src="img/flags/flag-dominikana-26-18.png" srcset="img/flags/flag-dominikana-26-18@2x.png 2x"
@@ -1112,6 +1178,14 @@
             <div class="user-card user-card--catalog">
               <a class="user-card__image" href="#">
                 <picture>
+                  <source type="image/webp"
+                    srcset="img/users/rogovaya-desktop.webp 1x, img/users/rogovaya-desktop@2x.webp 2x"
+                    media="(min-width: 1440px)">
+                  <source type="image/webp"
+                    srcset="img/users/rogovaya-tablet.webp 1x, img/users/rogovaya-tablet@2x.webp 2x"
+                    media="(min-width: 768px)">
+                  <source type="image/webp"
+                    srcset="img/users/rogovaya-mobile.webp 1x, img/users/rogovaya-mobile@2x.webp 2x">
                   <source srcset="img/users/rogovaya-desktop.png 1x, img/users/rogovaya-desktop@2x.png 2x"
                     media="(min-width: 1440px)">
                   <source srcset="img/users/rogovaya-tablet.png 1x, img/users/rogovaya-tablet@2x.png 2x"
@@ -1167,6 +1241,11 @@
               <ul class="flag-list flag-list--catalog flag-list--two-flags list-reset">
                 <li class="flag-list__item flag-list__item--companions-filtered">
                   <picture class="flag-list__img">
+                    <source type="image/webp"
+                      srcset="img/flags/flag-united-kingdom-35-24.webp 1x, img/flags/flag-united-kingdom-35-24@2x.webp 2x"
+                      media="(min-width: 767px)">
+                    <source type="image/webp"
+                      srcset="img/flags/flag-united-kingdom-26-18.webp 1x, img/flags/flag-united-kingdom-26-18@2x.webp 2x">
                     <source
                       srcset="img/flags/flag-united-kingdom-35-24.png 1x, img/flags/flag-united-kingdom-35-24@2x.png 2x"
                       media="(min-width: 767px)">
@@ -1177,6 +1256,11 @@
                 </li>
                 <li class="flag-list__item flag-list__item--companions-filtered">
                   <picture class="flag-list__img">
+                    <source type="image/webp"
+                      srcset="img/flags/flag-germany-35-24.webp 1x, img/flags/flag-germany-35-24@2x.webp 2x"
+                      media="(min-width: 767px)">
+                    <source type="image/webp"
+                      srcset="img/flags/flag-germany-26-18.webp 1x, img/flags/flag-germany-26-18@2x.webp 2x">
                     <source srcset="img/flags/flag-germany-35-24.png 1x, img/flags/flag-germany-35-24@2x.png 2x"
                       media="(min-width: 767px)">
                     <img src="img/flags/flag-germany-26-18.png" srcset="img/flags/flag-germany-26-18@2x.png 2x"
@@ -1292,6 +1376,11 @@
     <div class="page-footer__content">
       <a href="index.html" class="link-reset">
         <picture>
+          <source type="image/webp" srcset="img/logos/logo-blue-desktop.webp 1x, img/logos/logo-blue-desktop@2x.webp 2x"
+            media="(min-width: 1440px)">
+          <source type="image/webp" srcset="img/logos/logo-blue-tablet.webp 1x, img/logos/logo-blue-tablet@2x.webp 2x"
+            media="(min-width: 768px)">
+          <source type="image/webp" srcset="img/logos/logo-blue-mobile.webp 1x, img/logos/logo-blue-mobile@2x.webp 2x">
           <source srcset="img/logos/logo-blue-desktop.png 1x, img/logos/logo-blue-desktop@2x.png 2x"
             media="(min-width: 1440px)">
           <source srcset="img/logos/logo-blue-tablet.png 1x, img/logos/logo-blue-tablet@2x.png 2x"
@@ -1341,7 +1430,8 @@
         </li>
       </ul>
     </div>
-    <a class="page-footer__developers link-reset" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="noreferrer">
+    <a class="page-footer__developers link-reset" href="https://htmlacademy.ru/intensive/adaptive" target="_blank"
+      rel="noreferrer">
       <span class="page-footer__text">Разработано</span>
       <img src="img/htmlacademy.svg" alt="HTML Academy" width="27" height="34">
     </a>
