Добавил area-label для кнопки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -131,7 +131,7 @@
     </div>
     <div class="countries-filter">
       <h2 class="countries-filter__title hide-on-tablets">Фильтрация по странам:</h2>
-      <button class="button button--open-filter button-reset" type="button">
+      <button class="button button--open-filter button-reset" type="button" aria-label="Показать все">
         <span class="hide-on-mobile">Показать все</span>
       </button>
       <div class="continents continents--catalog">
