Перенес иконки из тега img в спрайт и вставил через use для индекс страницы

--- a/source/index.html
+++ b/source/index.html
@@ -81,6 +81,71 @@
       <path
         d="M43.38 43.24V39.9a5.84 5.84 0 00-2.81-5.09c-.94-.67-2.95-.8-3.9-.8l-2.13 2.28.8 1.74v4.02L34 43.5l-1.34-1.47v-4.02l.94-1.74L31.32 34c-1.07 0-3.08.13-4.02.8a5.53 5.53 0 00-2 2.28 5.15 5.15 0 00-.68 2.81v3.35s3.49 1.48 9.38 1.48c5.9 0 9.38-1.48 9.38-1.48zM34 23.42c-2.54 0-4.02 2.41-3.62 5.09.4 2.68 1.74 4.55 3.62 4.55 1.88 0 3.21-1.87 3.62-4.55.4-2.81-1.08-5.1-3.62-5.1z" />
     </symbol>
+    <symbol viewBox="0 0 14 2" id="icon-minus" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+      <path stroke="currentColor" stroke-width="2" d="M0 1h14" />
+    </symbol>
+    <symbol viewBox="0 0 14 14" id="icon-plus" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+      <path stroke="currentColor" stroke-width="2" d="M7 0v14M0 7h14" />
+    </symbol>
+    <symbol viewBox="0 0 15 21" id="icon-previous-step" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+      <path
+        d="M11.812 1.4a1.063 1.063 0 00-.345-.26.958.958 0 00-.814 0c-.13.06-.246.149-.345.26l-7.06 7.972a.972.972 0 00-.183.31 1.063 1.063 0 000 .732.973.973 0 00.183.31l7.06 7.972a.978.978 0 001.504 0c.416-.47.071-.964-.345-1.434l-3.718-4.178-2.62-3.067 6.692-7.714s.407-.442-.01-.902z" />
+    </symbol>
+    <symbol viewBox="0 0 14 21" id="icon-next-step" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+      <path
+        d="M3.07 19.37c.098.111.215.2.344.26a.959.959 0 00.815 0c.129-.06.246-.149.344-.26l7.061-7.972a.971.971 0 00.184-.31 1.062 1.062 0 000-.732.971.971 0 00-.184-.31l-7.06-7.972a.978.978 0 00-1.505 0c-.416.47.255 1.285.671 1.755l6.085 6.893-6.41 7.25c-.408.46-.762.937-.346 1.397z" />
+    </symbol>
+    <symbol viewBox="0 0 9 9" id="icon-close-planner" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+      <path d="M7.875 1.125l-6.75 6.75M1.125 1.125l6.75 6.75" stroke="currentColor" stroke-linecap="round"
+        stroke-linejoin="round" />
+    </symbol>
+    <symbol viewBox="0 0 19 19" id="icon-call" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path
+        d="M9.77429 8.22389C9.77429 8.41289 9.92792 8.56139 10.1157 8.56139C10.5048 8.56139 10.8189 8.87526 10.8189 9.25664C10.8189 9.44226 10.9725 9.59414 11.1603 9.59414C11.348 9.59414 11.5017 9.44226 11.5017 9.25664C11.5017 8.50064 10.8804 7.88639 10.1157 7.88639C9.92792 7.88639 9.77429 8.03827 9.77429 8.22389ZM15.332 9.59414C15.5231 9.59414 15.6733 9.44226 15.6733 9.25664C15.6733 6.22589 13.1813 3.76215 10.1157 3.76215C9.92792 3.76215 9.77429 3.914 9.77429 4.09965C9.77429 4.28527 9.92792 4.43715 10.1157 4.43715C12.8057 4.43715 14.9906 6.60051 14.9906 9.25664C14.9906 9.44226 15.1442 9.59414 15.332 9.59414Z"
+        fill="#161C35" />
+      <path
+        d="M12.9047 9.25661C12.9047 9.44223 13.0583 9.59411 13.2461 9.59411C13.4339 9.59411 13.5875 9.44223 13.5875 9.25661C13.5875 7.36324 12.0308 5.82424 10.1157 5.82424C9.9279 5.82424 9.77427 5.97612 9.77427 6.16174C9.77427 6.35074 9.9279 6.49924 10.1157 6.49924C11.6553 6.49924 12.9047 7.73786 12.9047 9.25661ZM10.1157 1.69998C9.9279 1.69998 9.77427 1.85186 9.77427 2.03748C9.77427 2.22312 9.9279 2.37498 10.1157 2.37498C13.9562 2.37498 17.0798 5.46312 17.0798 9.25661C17.0798 9.44223 17.23 9.59411 17.4212 9.59411C17.6089 9.59411 17.7626 9.44223 17.7626 9.25661C17.7626 5.0885 14.3317 1.69998 10.1157 1.69998ZM13.4509 12.8139L13.0037 13.0535C12.2493 13.4619 11.6622 14.5812 10.7312 13.7375L8.30011 11.3L6.20004 9.25661C5.14495 7.92348 6.32635 7.60623 6.73941 6.85699L6.98179 6.41825C7.25489 5.91873 7.35388 5.35849 7.27196 4.79823C7.19345 4.23799 6.93741 3.72836 6.52775 3.32336C6.02935 2.83062 5.36707 2.56062 4.66042 2.56062C3.95376 2.56062 3.28807 2.83062 2.78964 3.32336L2.61556 3.49886C1.69383 4.41012 1.588 5.97948 2.31514 7.92348C3.0013 9.77973 4.3839 11.7912 6.20004 13.5867C8.96862 16.3239 12.0513 17.9 14.2634 17.9C15.1373 17.9 15.8781 17.6536 16.4039 17.1339L16.5814 16.9584C17.0764 16.469 17.3529 15.8142 17.3563 15.1089C17.3529 14.4204 17.0695 13.7454 16.5814 13.2627C15.7587 12.4494 14.4717 12.2671 13.4509 12.8139Z"
+        fill="#161C35" />
+    </symbol>
+    <symbol viewBox="0 0 19 17" id="icon-mail" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path
+        d="M2.0166 3.32528L8.7666 7.55572C8.9934 7.69747 9.2868 7.76467 9.582 7.76467C9.8772 7.76467 10.1706 7.69747 10.3974 7.55572L17.1474 3.32528C17.5875 3.04913 18.0033 1.97498 17.196 1.97498H1.9689C1.1616 1.97498 1.5774 3.04913 2.0166 3.32528ZM17.3517 5.63842L10.3974 9.86677C10.0914 10.0537 9.8772 10.0757 9.582 10.0757C9.2868 10.0757 9.0726 10.0537 8.7666 9.86677C8.4606 9.67987 2.3469 5.94082 1.8474 5.63737C1.4964 5.42317 1.5 5.67412 1.5 5.86732V13.525C1.5 13.966 2.0094 14.575 2.4 14.575H16.8C17.1906 14.575 17.7 13.966 17.7 13.525V5.86837C17.7 5.67517 17.7036 5.42422 17.3517 5.63842Z"
+        fill="#161C35" />
+    </symbol>
+    <symbol viewBox="0 0 12 16" id="icon-arrow-down" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <g opacity="0.3">
+        <path
+          d="M0.63847 5.09805C0.56899 5.17667 0.513866 5.27006 0.476254 5.37289C0.438641 5.47571 0.419281 5.58595 0.419281 5.69727C0.419281 5.8086 0.438641 5.91883 0.476254 6.02165C0.513866 6.12448 0.56899 6.21787 0.63847 6.29649L5.59841 11.9231C5.65363 11.9859 5.71922 12.0357 5.79142 12.0696C5.86363 12.1036 5.94103 12.1211 6.0192 12.1211C6.09737 12.1211 6.17478 12.1036 6.24698 12.0696C6.31918 12.0357 6.38477 11.9859 6.43999 11.9231L11.3999 6.29649C11.6924 5.96472 11.6924 5.42982 11.3999 5.09805C11.1075 4.76628 10.8004 5.04112 10.5079 5.37289L7.9079 8.3364L5.99993 10.4241L1.19995 5.09079C1.19995 5.09079 0.924965 4.76628 0.63847 5.09805Z"
+          fill="black" />
+      </g>
+    </symbol>
+    <symbol viewBox="0 0 13 13" id="icon-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+      <g clip-path="url(#clip02)">
+        <path clip-rule="evenodd"
+          d="M6.32 5.104l.684-1.366c.17-.339.465-.825.882-1.218.41-.388.903-.651 1.497-.651 1.284 0 2.298 1.013 2.298 2.23 0 .925-.424 1.578-1.43 2.574-.259.255-.553.53-.879.835-.848.794-1.904 1.783-3.053 3.104C5.17 9.29 4.115 8.302 3.266 7.508a44.34 44.34 0 01-.878-.835C1.382 5.677.958 5.024.958 4.099c0-1.217 1.014-2.23 2.297-2.23.595 0 1.086.263 1.497.65.417.394.712.88.882 1.219l.685 1.366zm.3 6.334a.395.395 0 01-.601 0C4.793 9.985 3.683 8.946 2.769 8.09 1.187 6.611.192 5.68.192 4.1c0-1.654 1.37-2.994 3.063-2.994 1.226 0 2.083.802 2.608 1.534.199.278.35.547.456.757.133-.263.285-.517.457-.757.524-.733 1.381-1.534 2.607-1.534 1.693 0 3.064 1.34 3.064 2.994 0 1.58-.996 2.511-2.578 3.992-.913.856-2.023 1.895-3.25 3.346z"
+          fill="currentColor" />
+      </g>
+      <defs>
+        <clipPath id="clip02">
+          <path fill="currentColor" transform="translate(.192 .378)" d="M0 0h12.255v11.635H0z" />
+        </clipPath>
+      </defs>
+    </symbol>
+    <symbol viewBox="0 0 13 13" id="icon-heart-liked" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+      <g clip-path="url(#clip02)">
+        <path clip-rule="evenodd"
+          d="M6.32 5.104l.684-1.366c.17-.339.465-.825.882-1.218.41-.388.903-.651 1.497-.651 1.284 0 2.298 1.013 2.298 2.23 0 .925-.424 1.578-1.43 2.574-.259.255-.553.53-.879.835-.848.794-1.904 1.783-3.053 3.104C5.17 9.29 4.115 8.302 3.266 7.508a44.34 44.34 0 01-.878-.835C1.382 5.677.958 5.024.958 4.099c0-1.217 1.014-2.23 2.297-2.23.595 0 1.086.263 1.497.65.417.394.712.88.882 1.219l.685 1.366zm.3 6.334a.395.395 0 01-.601 0C4.793 9.985 3.683 8.946 2.769 8.09 1.187 6.611.192 5.68.192 4.1c0-1.654 1.37-2.994 3.063-2.994 1.226 0 2.083.802 2.608 1.534.199.278.35.547.456.757.133-.263.285-.517.457-.757.524-.733 1.381-1.534 2.607-1.534 1.693 0 3.064 1.34 3.064 2.994 0 1.58-.996 2.511-2.578 3.992-.913.856-2.023 1.895-3.25 3.346z"
+          fill="currentColor" />
+      </g>
+      <defs>
+        <clipPath id="clip02">
+          <path fill="currentColor" transform="translate(.192 .378)" d="M0 0h12.255v11.635H0z" />
+        </clipPath>
+      </defs>
+    </symbol>
+    <symbol viewBox="0 0 10 18" id="icon-show-more-arrow" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+      <path d="M0 9L9.75.34v17.32L0 9z" fill="currentColor" />
+    </symbol>
   </svg>
   <header class="page-header">
     <div class="menu">
@@ -126,8 +191,9 @@
           <li class="contact-list__item contact-list__item--menu-open">
             <a class="contact-list__link contact-list__link--menu contact-list__link--header-phone contact-list__link--phone contact-list__link--blue-bg-phone link-reset"
               href="tel:88005558628">
-              <img class="contact-list__image contact-list__image--menu" src="img/icon-call.svg" alt="Позвонить"
-                width="16" height="16">
+              <svg class="contact-list__image contact-list__image--menu" width="16" height="16">
+                <use xlink:href="#icon-call"></use>
+              </svg>
               <span class="contact-list__icon-container contact-list__icon-container--menu">
                 <svg class="contact-list__icon contact-list__icon--old-phone" width="19" height="17">
                   <use xlink:href="#icon-old-phone"></use>
@@ -139,7 +205,9 @@
           <li class="contact-list__item contact-list__item--menu-open">
             <a class="contact-list__link contact-list__link--menu contact-list__link--header-mail contact-list__link--mail link-reset"
               href="mailto:mail@htmlacademy.ru">
-              <img class="contact-list__image contact-list__image--menu" src="img/icon-mail.svg" alt="Телефон">
+              <svg class="contact-list__image contact-list__image--menu" width="19" height="17">
+                <use xlink:href="#icon-mail"></use>
+              </svg>
               <span class="contact-list__icon-container contact-list__icon-container--menu">
                 <svg class="contact-list__icon" width="24" height="25">
                   <use xlink:href="#icon-envelop"></use>
@@ -187,13 +255,17 @@
         <ul class="contact-list contact-list--index-body list-reset">
           <li class="contact-list__item contact-list__item--index-body">
             <a class="contact-list__link contact-list__link--phone link-reset" href="tel:88005558628">
-              <img class="contact-list__image" src="img/icon-call.svg" alt="Позвонить" width="16" height="16">
+              <svg class="contact-list__image" width="16" height="16">
+                <use xlink:href="#icon-call"></use>
+              </svg>
               <span class="visually-hidden">8 800 555-86-28</span>
             </a>
           </li>
           <li class="contact-list__item contact-list__item--index-body">
             <a class="contact-list__link contact-list__link--mail link-reset" href="mailto:mail@htmlacademy.ru">
-              <img class="contact-list__image" src="img/icon-mail.svg" alt="Телефон">
+              <svg class="contact-list__image" width="16" height="16">
+                <use xlink:href="#icon-mail"></use>
+              </svg>
               <span class="visually-hidden">mail@htmlacademy.ru</span>
             </a>
           </li>
