Исправил юзер-фото, добавил правильные изображения

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -754,13 +754,13 @@
             <div class="user-card user-card--catalog">
               <a class="user-card__image" href="#">
                 <picture>
-                  <source srcset="img/users/firsova-desktop.webp 1x, img/users/firsova-tablet-285-285@2x.webp 2x"
+                  <source srcset="img/users/firsova-desktop.webp 1x, img/users/firsova-desktop@2x.webp 2x"
                     media="(min-width: 1440px)">
                   <source srcset="img/users/firsova-tablet-190-190.webp 1x, img/users/firsova-tablet-190-190@2x.webp 2x"
                     media="(min-width: 768px)">
                   <source type="image/webp"
                     srcset="img/users/firsova-mobile.webp 1x, img/users/firsova-mobile@2x.webp 2x">
-                  <source srcset="img/users/firsova-desktop.png 1x, img/users/firsova-tablet-285-285@2x.png 2x"
+                  <source srcset="img/users/firsova-desktop.png 1x, img/users/firsova-desktop@2x.png 2x"
                     media="(min-width: 1440px)">
                   <source srcset="img/users/firsova-tablet-190-190.png 1x, img/users/firsova-tablet-190-190@2x.png 2x"
                     media="(min-width: 768px)">
@@ -906,13 +906,13 @@
               <a class="user-card__image" href="#">
                 <picture>
                   <source type="image/webp"
-                    srcset="img/users/demin-desktop.webp 1x, img/users/demin-tablet-285-285@2x.webp 2x"
+                    srcset="img/users/demin-desktop.webp 1x, img/users/demin-desktop@2x.webp 2x"
                     media="(min-width: 1440px)">
                   <source type="image/webp"
                     srcset="img/users/demin-tablet.webp 1x, img/users/demin-desktop-190-190@2x.webp 2x"
                     media="(min-width: 768px)">
                   <source type="image/webp" srcset="img/users/demin-mobile.webp 1x, img/users/demin-mobile@2x.webp 2x">
-                  <source srcset="img/users/demin-desktop.png 1x, img/users/demin-tablet-285-285@2x.png 2x"
+                  <source srcset="img/users/demin-desktop.png 1x, img/users/demin-desktop@2x.png 2x"
                     media="(min-width: 1440px)">
                   <source srcset="img/users/demin-tablet.png 1x, img/users/demin-desktop-190-190@2x.png 2x"
                     media="(min-width: 768px)">
