--- a/source/catalog.html
+++ b/source/catalog.html
@@ -132,13 +132,13 @@
       </defs>
     </symbol>
     <symbol viewBox="0 0 13 13" id="icon-heart-liked" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-      <g clip-path="url(#clip02)">
+      <g clip-path="url(#clip011)">
         <path clip-rule="evenodd"
           d="M6.32 5.104l.684-1.366c.17-.339.465-.825.882-1.218.41-.388.903-.651 1.497-.651 1.284 0 2.298 1.013 2.298 2.23 0 .925-.424 1.578-1.43 2.574-.259.255-.553.53-.879.835-.848.794-1.904 1.783-3.053 3.104C5.17 9.29 4.115 8.302 3.266 7.508a44.34 44.34 0 01-.878-.835C1.382 5.677.958 5.024.958 4.099c0-1.217 1.014-2.23 2.297-2.23.595 0 1.086.263 1.497.65.417.394.712.88.882 1.219l.685 1.366zm.3 6.334a.395.395 0 01-.601 0C4.793 9.985 3.683 8.946 2.769 8.09 1.187 6.611.192 5.68.192 4.1c0-1.654 1.37-2.994 3.063-2.994 1.226 0 2.083.802 2.608 1.534.199.278.35.547.456.757.133-.263.285-.517.457-.757.524-.733 1.381-1.534 2.607-1.534 1.693 0 3.064 1.34 3.064 2.994 0 1.58-.996 2.511-2.578 3.992-.913.856-2.023 1.895-3.25 3.346z"
           fill="currentColor" />
       </g>
       <defs>
-        <clipPath id="clip02">
+        <clipPath id="clip011">
           <path fill="currentColor" transform="translate(.192 .378)" d="M0 0h12.255v11.635H0z" />
         </clipPath>
       </defs>
@@ -905,8 +905,7 @@
             <div class="user-card user-card--catalog">
               <a class="user-card__image" href="#">
                 <picture>
-                  <source type="image/webp"
-                    srcset="img/users/demin-desktop.webp 1x, img/users/demin-desktop@2x.webp 2x"
+                  <source type="image/webp" srcset="img/users/demin-desktop.webp 1x, img/users/demin-desktop@2x.webp 2x"
                     media="(min-width: 1440px)">
                   <source type="image/webp"
                     srcset="img/users/demin-tablet.webp 1x, img/users/demin-desktop-190-190@2x.webp 2x"
