Добавил preload базовых шрифтов

--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preload" as="font" href="fonts/bloggersans.woff" type="font/woff" crossorigin>
+  <link rel="preload" as="font" href="fonts/bloggersans-bold.woff" type="font/woff" crossorigin>
+  <link rel="preload" as="font" href="fonts/bloggersans-light.woff" type="font/woff" crossorigin>
+  <link rel="preload" as="font" href="fonts/bloggersans-medium.woff" type="font/woff" crossorigin>
   <link rel="stylesheet" href="css/style.min.css">
   <title>HTML Academy: Погнали</title>
 </head>
