--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preload" as="font" href="fonts/bloggersans.woff" type="font/woff" crossorigin>
+  <link rel="preload" as="font" href="fonts/bloggersans-bold.woff" type="font/woff" crossorigin>
+  <link rel="preload" as="font" href="fonts/bloggersans-medium.woff" type="font/woff" crossorigin>
   <link rel="stylesheet" href="css/style.min.css">
   <title>Каталог</title>
 </head>
