Сделал рабочим меню с выключенным js

--- a/source/form.html
+++ b/source/form.html
@@ -123,7 +123,7 @@
       </g>
     </symbol>
   </svg>
-  <header class="page-header page-header--inner">
+  <header class="page-header page-header--menu-open page-header--inner">
     <div class="menu">
       <div class="menu__header">
         <a class="page-header__logo link-reset" href="index.html">
@@ -140,16 +140,16 @@
             <img src="img/logos/logo-white-mobile.png" srcset="img/logos/logo-white-mobile@2x.png 2x" alt="Погнали?">
           </picture>
         </a>
-        <button class="page-header__toggle-menu-button button-reset" type="button">
+        <button class="page-header__toggle-menu-button page-header__toggle-menu-button--menu-open button-reset" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
-        <div class="authorization">
+        <div class="authorization authorization--menu-open">
           <a class="button authorization__button link-reset">
             <span class="authorization__text">Авторизация</span>
           </a>
         </div>
       </div>
-      <div class="menu__body">
+      <div class="menu__body menu__body--menu-open">
         <nav class="main-nav">
           <ul class="main-nav__list site-list list-reset">
             <li class="main-nav__item">
