Добавил минификацию js

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -167,7 +167,8 @@
             <img src="img/logos/logo-white-mobile.png" srcset="img/logos/logo-white-mobile@2x.png 2x" alt="Погнали?">
           </picture>
         </a>
-        <button class="page-header__toggle-menu-button page-header__toggle-menu-button--menu-open button-reset" type="button">
+        <button class="page-header__toggle-menu-button page-header__toggle-menu-button--menu-open button-reset"
+          type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
         <div class="authorization authorization--menu-open">
@@ -1394,9 +1395,9 @@
       <img src="img/htmlacademy.svg" alt="HTML Academy" width="27" height="34">
     </a>
   </footer>
-  <script src="js/toggle-menu.js"></script>
-  <script src="js/user-score-progress-bar.js"></script>
-  <script src="js/filter-by-country.js"></script>
+  <script src="js/toggle-menu.min.js"></script>
+  <script src="js/user-score-progress-bar.min.js"></script>
+  <script src="js/filter-by-country.min.js"></script>
 </body>
 
 </html>
