--- a/source/form.html
+++ b/source/form.html
@@ -140,7 +140,8 @@
             <img src="img/logos/logo-white-mobile.png" srcset="img/logos/logo-white-mobile@2x.png 2x" alt="Погнали?">
           </picture>
         </a>
-        <button class="page-header__toggle-menu-button page-header__toggle-menu-button--menu-open button-reset" type="button">
+        <button class="page-header__toggle-menu-button page-header__toggle-menu-button--menu-open button-reset"
+          type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
         <div class="authorization authorization--menu-open">
@@ -927,9 +928,9 @@
       </a>
     </footer>
   </main>
-  <script src="js/toggle-menu.js"></script>
-  <script src="js/alphabet.js"></script>
-  <script src="js/user-score-progress-bar.js"></script>
+  <script src="js/toggle-menu.min.js"></script>
+  <script src="js/user-score-progress-bar.min.js"></script>
+  <script src="js/alphabet.min.js"></script>
 </body>
 
 </html>
